# VerifyAI

./: .gitignore  README.md  pyproject.toml  requirements.txt  verifyai.db
app/: main.py  schemas.py
app/api/: routes.py
app/evaluations/: check_code.py  check_consistency.py  check_fluency.py  check_grounding.py  check_safety.py  check_sentiment.py  check_structure.py  check_summarization.py
app/models/: ollama_chat.py
app/pipeline/: checks.py
app/routers/: evaluation.py  history.py  models.py  test_cases.py  verify.py
app/static/: index.html
app/utils/: database.py  file_parser.py  get_cosine_similarity_score.py  get_fluency_score.py  llm_execution.py
tests/: test_batch_and_evaluation.py  test_get_cosine_similarity_score.py  test_main.py  test_semantic_check.py  test_verification.py
