[tool.poetry]
name = "verifyai"
version = "0.1.0"
description = "A FastAPI application"
authors = ["Lalit Kumar <lalit.k.pal@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
httpx = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"