[tool.poetry]
name = "verifyai"
version = "0.1.0"
description = "AI & Coding Agent Verification Harness"
authors = ["Lalit Kumar <lalit.k.pal@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.95.0"
uvicorn = "0.22.0"
pydantic = "1.10.21"
sqlalchemy = "1.4.41"
databases = "0.6.2"
ollama = "0.1.0"
openai = "0.27.0"
sentence-transformers = "5.1.0"
numpy = "1.26.4"
openpyxl = "3.1.2"
python-multipart = "0.0.9"
httpx = ">=0.25.2"
language-tool-python = "2.8.1"

[tool.poetry.dev-dependencies]
pytest = "7.2.0"
pytest-asyncio = "0.18.3"

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
